--- a/signup.css
+++ b/signup.css
@@ -23,6 +23,7 @@ body {
 .close {
   margin-left: 509px;
   margin-top: 7px;
+  cursor: pointer;
 }
 
 .ls-button {
@@ -37,6 +38,7 @@ body {
 
 .terms,.policy {
   color: #1E96FC;
+  cursor: pointer;
 }
 
 .login {
@@ -49,6 +51,7 @@ body {
   font-family: Abel,Arial;
   font-size: 24px;
   color: #828282;
+  cursor: pointer;
 }
 
 .signup {
@@ -59,6 +62,7 @@ body {
   height: 30px;
   font-family: Abel,Arial;
   font-size: 24px;
+  cursor: pointer;
 }
 
 .line {
@@ -118,6 +122,7 @@ body {
   padding: 10px 128px;
   color: #fff;
   display: inline-block;
+  cursor: pointer;
 }
 
 .line1{
@@ -155,7 +160,8 @@ margin-left: 83px;
   font-size: 15px;
   color: #4F4F4F;
   border-radius: 6px;
-  border: 1px solid lightgrey
+  border: 1px solid lightgrey;
+  cursor: pointer;
 }
 
 .facebook {
@@ -166,6 +172,7 @@ margin-left: 83px;
   font-size: 15px;
   color: #4F4F4F;
   border-radius: 6px;
-  border: 1px solid lightgrey
+  border: 1px solid lightgrey;
+  cursor: pointer;
 }
 
