--- a/houserental.css
+++ b/houserental.css
@@ -20,7 +20,7 @@ body {
   display: flex;
   position: relative;
   margin-top: 20px;
-  width: 1900px;
+  width: 100%;
 }
 
 .new-div {
@@ -33,8 +33,12 @@ body {
   margin: 0;
 }
 
-@media (min-width: 751px) and (max-width:999px) {
-  .cover-image { width: auto;}
+@media (min-width: 751px) {
+  .cover-img { width: fit-content;}
+}
+
+@media (max-width:999px) {
+  .cover-img { width: fit-content; }
 }
 
 .one {
@@ -76,6 +80,7 @@ body {
   display: flex;
   position: absolute;
   cursor: pointer;
+  text-wrap: auto;
 }
 
 .search-bar {
@@ -89,6 +94,7 @@ body {
   padding-right: 200px;
   display: flex;
   position: absolute;
+  flex: 1;
 }
 
 .featured-locations {
@@ -147,7 +153,7 @@ body {
 
 .second-image-section {
   margin-left: 110px;
-  margin-right: 200px;
+  
   display: grid;
  
 }
