--- a/houserental.css
+++ b/houserental.css
@@ -1,4 +1,5 @@
 body {
+  font-size: 16px;
   margin: 0;
   background-color: #F2F2F2;
   margin-bottom: 500px;
@@ -19,7 +20,6 @@ body {
 .cover-img {
   display: flex;
   position: relative;
-  margin-top: 20px;
   width: 100%;
 }
 
@@ -33,14 +33,14 @@ body {
   display: flex;
   margin: 0;
 }
-
 @media (min-width: 751px) {
   .cover-img { width: fit-content;}
 }
 
-@media (max-width:999px) {
-  .cover-img { width: 100%; }
+@media screen and (max-width: 800px){
+  .cover-img {width: 100%;}
 }
+
 
 .one {
  flex: 1;
@@ -273,18 +273,18 @@ justify-content: space-between;
   margin-top: 60px;
 }
 
-@media (min-width: 751px) and (max-width:999px){
-  .be-the-first-section{ width:75%}
+@media screen and (min-width: 999px) and (max-width: 620px) {
+  /* For mobile phones: */
+  .be-the-first-section {
+    width: 100%;
+  }
 }
 
-@media (max-width: 750px){
-  .be-the-first-section { width: 50%;}
-  
-}
+
 
 .be-the-first-text {
   font-family: Abel;
-  font-size: 27px;
+  font-size: 2vw;
   color: #fff;
   margin-left: 500px;
   margin-top: 100px;
