--- a/navbar.css
+++ b/navbar.css
@@ -1,7 +1,9 @@
 .navbar-mobi {
+  background-color: white;
   position: fixed;
   z-index:auto;
   width: 100%;
+  height: 10%;
   bottom: 0;
 }
 
@@ -9,7 +11,6 @@
   display: flex;
   align-items: center;
   justify-content:space-between ;
-  
 }
 
 .main-nav {
