--- a/buttons.css
+++ b/buttons.css
@@ -113,3 +113,10 @@
     margin-left: 6.25em ;
   }
   }
+
+@media (max-width: 752px) {
+  .unlock-button, .input-email, .be-the-first-text,
+  .search-bar, .search-location-button {
+  margin-left: 0.8em ;
+}
+}
