--- a/houserental.css
+++ b/houserental.css
@@ -269,8 +269,7 @@ justify-content: space-between;
   margin-top: 60px;
 }
 
-@media screen and (min-width: 999px) and (max-width: 620px) {
-  /* For mobile phones: */
+@media screen  and (max-width: 620px) {
   .be-the-first-section {
     width: 100%;
   }
@@ -296,12 +295,6 @@ justify-content: space-between;
   border-radius: 8px;
 }
 
-@media (max-width: 752px) {
-   {
-   margin-right: 2em ;
- }
- }
-
  @media (max-width: 752px) {
   .featured-locations, .see-all,
    .see-all2, .browse-see, .featured-see {
@@ -316,3 +309,15 @@ justify-content: space-between;
 }
 }
 
+@media (max-width: 752px) {
+  .list-property-button2 {
+    margin-left: 6.25em ;
+  }
+  }
+
+@media (max-width: 752px) {
+  .unlock-button, .input-email, .be-the-first-text,
+  .search-bar, .search-location-button {
+  margin-left: 0.8em ;
+}
+}
