--- a/houserental.css
+++ b/houserental.css
@@ -175,7 +175,7 @@ body {
  
 .second-image-section1 {
   display: inline-block;
- margin-right: 3.4em;
+  margin-right: 3.4em;
   background-color: white;
   border-radius: 8px;
 }
@@ -303,11 +303,18 @@ justify-content: space-between;
  }
 
  @media (max-width: 752px) {
-  .second-image-section, .featured-locations,
+  .featured-locations, .second-image-section,
   .browse-hostel, .third-image-section {
   margin-left: 0.8em;
 }
 }
+
+@media (max-width: 752px) {
+  .second-image-section1 {
+   margin-right: 1em;
+}
+}
+
 
 @media (max-width: 752px) {
   .list-property-button2 {
@@ -317,7 +324,7 @@ justify-content: space-between;
 
 @media (max-width: 752px) {
   .unlock-button, .input-email, .be-the-first-text,
-  .search-bar, .search-location-button {
+  .search-bar, .search-location-button, .last-text {
   margin-left: 0.8em ;
 }
 }
