--- a/houserental.css
+++ b/houserental.css
@@ -324,7 +324,7 @@ justify-content: space-between;
 
 @media (max-width: 752px) {
   .unlock-button, .input-email, .be-the-first-text,
-  .search-bar, .search-location-button, .last-text {
+  .search-bar, .search-location-button {
   margin-left: 0.8em ;
 }
 }
