--- a/footer.css
+++ b/footer.css
@@ -44,3 +44,9 @@ color: #1E96FC;
    margin-right: 4em;
   }
 }
+
+@media (max-width: 752px) {
+  .last-text {
+   margin: 2em 0.8em 2em 0.8em;
+  }
+}
