--- a/footer.css
+++ b/footer.css
@@ -40,13 +40,13 @@ color: #1E96FC;
 
 @media (max-width: 752px) {
   .t, .top {
-   margin-left: 2em;
+   margin-left: 3em;
    margin-right: 3em;
   }
 }
 
 @media (max-width: 752px) {
   .last-text {
-   margin: 2em 0.8em 2em 0.8em;
+   margin: 2em 0 2em 0.5em;
   }
 }
